# trace-narrative

./: .design-system-guidance.json  .diagramrc  .gitignore  .memory-metrics.json  .mise.toml  .npmrc  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  VISION.md  biome.json  firefly-inspired-v3.html  harness.contract.json  index.html  lighthouserc.cjs  lighthouserc.json  memory.json  package.json  playwright.config.ts  pnpm-lock.yaml  prek.toml  readout-inspired-v3.html  release-please-config.json  screenshot.mjs  serve.mjs  test-debug.ts  tmp-debug-route.mjs  tsconfig.json  tsconfig.node.json  typedoc.json  vite.config.ts  vite.integration.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/contracts/: codex-app-server-v1-contract.json
src-tauri/migrations/: 013_narrative_feedback.sql  014_narrative_feedback_hardening.sql  015_live_sessions.sql  017_approval_ledger.sql  017_trust_recovery_pause_reason.sql
src-tauri/permissions/: activity.json  dashboard.json  ingest.json  rules.json
src-tauri/src/: approval_ledger.rs  codex_app_server.rs  ingest_config.rs  lib.rs  linking.rs  recovery_checkpoint.rs  secret_store.rs
src-tauri/src/adapters/: mcp_client.rs  mcp_server.rs  mod.rs
src-tauri/tests/: app_server_harness.rs  approval_ledger_tests.rs  codex_app_server_path_policy.rs  codex_app_server_schema_drift_gate.rs  codex_app_server_trust.rs  codex_capability_policy_gate.rs  codex_command_surface_allowlist.rs
(+513 files in other folders)
