[package]
name = "narrative-desktop-mvp"
version = "0.4.0"
description = "Narrative MVP desktop app"
authors = ["you"]
edition = "2021"
default-run = "narrative-desktop-mvp"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.8"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs", "net", "process", "rt", "rt-multi-thread", "sync"] }
axum = "0.7"
bytes = "1"
opentelemetry-proto = { version = "0.6", features = ["gen-tonic-messages", "trace", "logs"] }
prost = "0.12"
keyring = "2.3"
rand = "0.8"

# Attribution tracking dependencies
git2 = "0.20"
sha2 = "0.10"
regex = "1.10"
lazy_static = "1.4"
dirs = "5.0"
subtle = "2.6"

# Cursor SQLite parsing
rusqlite = { version = "0.32", features = ["bundled"] }

# File watching for auto-import
notify = "6.1"
